# Introduction-to-ROS

./: LICENSE  README.md  c_cpp_properties.json  settings.json
Exercise 1/: Exercise 1.md  README.md
Exercise 2/: README.md
Exercise 2/smb_highlevel_controller/: exercise2_field.rviz
Exercise 2/smb_highlevel_controller/config/: config.yaml
Exercise 2/smb_highlevel_controller/launch/: smb_highlevel_controller_node.launch
Exercise 2/smb_highlevel_controller/src/: SmbHighlevelController.cpp
Exercise 3/: README.md
Exercise 3/src/smb_highlevel_controller/: CMakeLists.txt
Exercise 3/src/smb_highlevel_controller/config/: config.yaml
Exercise 3/src/smb_highlevel_controller/launch/: smb_highlevel_controller_node.launch
Exercise 3/src/smb_highlevel_controller/src/: SmbHighlevelController.cpp
Exercise 4/: README.md
Exercise 4/src/smb_highlevel_controller/: CMakeLists.txt  package.xml
Exercise 4/src/smb_highlevel_controller/launch/: ekf_localization.launch  smb_highlevel_controller_node.launch
Exercise 5/: README.md
Exercise 5/src/smb_highlevel_controller/: CMakeLists.txt  package.xml
Exercise 5/src/smb_highlevel_controller/config/: config.yaml
Exercise 5/src/smb_highlevel_controller/include/smb_highlevel_controller/: SmbHighlevelController.hpp
Exercise 5/src/smb_highlevel_controller/launch/: ekf_localization.launch  smb_highlevel_controller_node.launch
Exercise 5/src/smb_highlevel_controller/plot/: accelerate.xml  smb_xy.xml
Exercise 5/src/smb_highlevel_controller/rviz/: exercise4.rviz
Exercise 5/src/smb_highlevel_controller/src/: SmbHighlevelController.cpp  StopClose.cpp  StopCrash.cpp
src/new_pkg/: CMakeLists.txt  package.xml
(+6 files in other folders)
